--- a/Frontend_Coding_Challenge/src/app/app.component.html
+++ b/Frontend_Coding_Challenge/src/app/app.component.html
@@ -1,2 +1,27 @@
-<app-navbar></app-navbar>
+<app-navbar (search)="handleSearch($event)" ></app-navbar>
+
+<div *ngIf="players.length > 0" class="container mt-4">
+  <h5>Search Results:</h5>
+  <table class="table table-bordered table-striped">
+    <thead class="table-dark">
+      <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Jersey</th>
+        <th>Role</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let player of players">
+        <td>{{ player.playerId }}</td>
+        <td>{{ player.playerName }}</td>
+        <td>{{ player.jerseyNumber }}</td>
+        <td>{{ player.role }}</td>
+      </tr>
+    </tbody>
+  </table>
+  <button *ngIf="players.length > 0" class="btn btn-sm btn-outline-secondary mb-2"
+        (click)="players = []">Clear Results</button>
+</div>
+
 <router-outlet></router-outlet>
